--- a/css/style.css
+++ b/css/style.css
@@ -1927,6 +1927,8 @@ input[type="submit"] {
 @media (max-width: 767px) {
   #fh5co-header {
       background-image: url(../images/bg.jpeg) !important; /* Replace with the appropriate mobile background image */
+      background-size: cover !important; /* Ensures the background image covers the entire header */
+      background-position: center !important; /* Centers the background image within the header */
   }
 }
 
