--- a/css/style.css
+++ b/css/style.css
@@ -875,6 +875,11 @@ form label {
     font-size: 30px;
   }
 }
+@media screen and (max-width: 768px){
+.fh5co-cover {
+    height: 580px;
+}
+}
 #fh5co-header .display-tc h2,
 #fh5co-counter .display-tc h2,
 .fh5co-cover .display-tc h2 {
