--- a/css/style.css
+++ b/css/style.css
@@ -305,7 +305,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .fh5co-cover {
-  height: 1000px;
+  /* height: 1000px; */
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
@@ -326,7 +326,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 @media screen and (max-width: 768px) {
   .fh5co-cover {
-    height: 900px;
+    height: 100px;
   }
 }
 .fh5co-cover .display-t,
@@ -875,12 +875,7 @@ form label {
     font-size: 30px;
   }
 }
-@media screen and (max-width: 768px){
-.fh5co-cover {
-    height: 580px;
-    padding-top: 40px !important;
-}
-}
+
 #fh5co-header .display-tc h2,
 #fh5co-counter .display-tc h2,
 .fh5co-cover .display-tc h2 {
