--- a/css/style.css
+++ b/css/style.css
@@ -326,7 +326,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 @media screen and (max-width: 768px) {
   .fh5co-cover {
-    height: 100px !important;
+    height: fit-content !important;
   }
 }
 .fh5co-cover .display-t,
