--- a/css/style.css
+++ b/css/style.css
@@ -1929,11 +1929,23 @@ input[type="submit"] {
   }
 }
 @media (max-width: 767px) {
- body {
-      background-image: url(../images/mobi_bg.jpg) !important; /* Replace with the appropriate mobile background image */
-      background-size: auto !important; /* Ensures the background image covers the entire header */
-      background-position: center !important; /* Centers the background image within the header */
-      filter: blur(5px); 
+  body {
+    position: relative;
+  }
+
+  body::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(../images/mobi_bg.jpg); /* Replace with the appropriate mobile background image */
+    background-size: cover;
+    background-position: center;
+    filter: blur(5px); /* Adjust the blur radius as needed */
+    z-index: -1;
   }
 }
+
 
