--- a/css/style.css
+++ b/css/style.css
@@ -1941,9 +1941,9 @@ input[type="submit"] {
     width: 100%;
     height: 100%;
     background-image: url(../images/mobi_bg.jpg); /* Replace with the appropriate mobile background image */
-    background-size: cover;
+    background-size: initial;
     background-position: center;
-    filter: blur(5px); /* Adjust the blur radius as needed */
+    /* filter: blur(5px); Adjust the blur radius as needed */
     z-index: -1;
   }
 }
